--- a/Assignment1/Resources/layout/activity_main.axml
+++ b/Assignment1/Resources/layout/activity_main.axml
@@ -1,51 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:weightSum="90"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:minWidth="25px"
-    android:minHeight="25px">
+    android:weightSum="90">
     <LinearLayout
         android:orientation="vertical"
         android:layout_weight="30"
-        android:layout_width="wrap_content"
-        android:layout_height="120dp"
-        android:id="@+id/linearLayout1"
-        android:minWidth="25px"
-        android:minHeight="25px">
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:id="@+id/linearLayout1">
         <ImageButton
             android:src="@drawable/clock"
-            android:layout_weight="30"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageButton1" />
+            android:id="@+id/imgbutton1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
         android:layout_weight="30"
-        android:layout_width="wrap_content"
-        android:layout_height="120dp"
-        android:id="@+id/linearLayout2"
-        android:minWidth="25px"
-        android:minHeight="25px">
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:id="@+id/linearLayout2">
         <ImageButton
             android:src="@drawable/list"
+            android:id="@+id/list_image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageButton2" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
         android:layout_weight="30"
-        android:layout_width="wrap_content"
-        android:layout_height="120dp"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:id="@+id/linearLayout3">
         <ImageButton
             android:src="@drawable/add"
+            android:id="@+id/add_image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageButton3" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </LinearLayout>
