--- a/Assignment1/Resources/layout/list.axml
+++ b/Assignment1/Resources/layout/list.axml
@@ -32,37 +32,13 @@
         android:foregroundGravity="right" />
     <LinearLayout
         android:orientation="horizontal"
-        android:minWidth="25px"
-        android:minHeight="25px"
+        android:layout_marginTop="150dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toLeftOf="@id/imgbutton2"
-        android:id="@+id/linearLayout1" />
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_marginTop="250dp"
-        android:layout_marginLeft="120dp"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:id="@+id/linearLayout1"
-        android:layout_centerInParent="false">
-        <AnalogClock
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:id="@+id/analogClock1" />
-    </LinearLayout>
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_marginTop="500dp"
-        android:layout_marginLeft="120dp"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:id="@+id/linearLayout1"
-        android:layout_centerInParent="false">
-        <TextView
-            android:id="@+id/textview1"
-            android:text="country"
-            android:layout_width="200dp"
-            android:layout_height="100dp" />
+        android:layout_height="match_parent"
+        android:id="@+id/linearLayout1">
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/listView1" />
     </LinearLayout>
 </RelativeLayout>
