--- a/Assignment1/Resources/layout/activity_main.axml
+++ b/Assignment1/Resources/layout/activity_main.axml
@@ -40,29 +40,34 @@
         android:id="@+id/linearLayout1" />
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_marginTop="250dp"
-        android:layout_marginLeft="120dp"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginLeft="60dp"
+        android:layout_width="600dp"
+        android:layout_height="400dp"
         android:id="@+id/linearLayout1"
-        android:layout_centerInParent="false">
-        <AnalogClock
-            android:layout_width="200dp"
+        android:layout_centerInParent="false"
+        android:gravity="center_vertical">
+        <TextView
+            android:id="@+id/ClockTextView"
+            android:layout_width="600dp"
             android:layout_height="200dp"
-            android:id="@+id/analogClock1" />
+            android:textSize="120dp"
+            android:layout_marginBottom="100dp" />
     </LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_marginTop="500dp"
-        android:layout_marginLeft="120dp"
+        android:layout_marginTop="400dp"
+        android:layout_marginLeft="170dp"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:id="@+id/linearLayout1"
-        android:layout_centerInParent="false">
+        android:layout_centerInParent="false"
+        android:gravity="fill_vertical">
         <TextView
             android:id="@+id/textview1"
-            android:text="country"
             android:layout_width="200dp"
-            android:layout_height="100dp" />
+            android:layout_height="100dp"
+            android:textSize="30dp"
+            android:layout_gravity="center_horizontal" />
     </LinearLayout>
 </RelativeLayout>
