--- a/Assignment1/Resources/layout/add.axml
+++ b/Assignment1/Resources/layout/add.axml
@@ -30,4 +30,15 @@
         android:layout_marginLeft="260dp"
         android:layout_alignParentRight="true"
         android:foregroundGravity="right" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_marginTop="150dp"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/linearLayout1">
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/addlist" />
+    </LinearLayout>
 </RelativeLayout>
